# Auto-Prot

./: .coverage  .coverage.eduroam-int-dhcp-97-26-1.ucl.ac.uk.96010.XSbXzkux  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  License.md  README.md  main.ipynb  main.py  pyproject.toml
.github/workflows/: test.yml
Auto_Prot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
autoprot/analysis/: all_samples.py  analysis.py  pairwise.py
configs/: auto-prot-config.json  auto-prot-config.yaml  auto-prot-env-compare-msstats-macOS.yml  auto-prot-env-compare-msstats-windowsOS.yml  auto-prot-env-limma-macOS.yml  auto-prot-env-limma-myriad.yml  auto-prot-env-limma-windowsOS.ml  auto-prot-env-limma-windowsOS.yml  auto-prot-env-macOS.yml  auto-prot-env-markdown-macOS.yml  auto-prot-env-markdown-windowsOS.yml  auto-prot-env-myriad.yml  auto-prot-env-portable.yml  auto-prot-env-windowsOS-2.yml  auto-prot-env-windowsOS.yml  auto-prot.json  environment-ci.yml  requirements-dev.txt
docs/: Workflow.md  compare-analysis-methods.md  methods_boilerplate.md  setup.md  stats_details  stats_details.md
report/: example-report-out.html  report-template.md
tests/: test_all_samples.py  test_analysis.py  test_check_env.py  test_data_io.py  test_data_preprocess.py  test_data_processing.py  test_data_utils.py  test_gen_random_data.py  test_generate_report.py  test_metadata_recording.py  test_pairwise.py
utils/: DE-limma.R  analysis.py  check_env.py  data_io.py  data_preprocess.py  data_processing.py  data_utils.py  gen_random_data.py  generate_report.py
(+33 files in other folders)
