[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Auto-Prot"
version = "1.0.0"
authors = [
  { name = "James D. Gilbert", email = "james.d.gilbert@ucl.ac.uk" },
]
description = "An analysis pipeline for generating standardised reports from protein intensity datasets"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jdgilbert245/Auto-Prot"
Issues = "https://github.com/jdgilbert245/Auto-Prot/issues"

[tool.setuptools.packages.find]
include = ["autoprot"]

[tool.ruff]
line-length = 88
exclude = ["output", "logs", "input", "taging"]
target-version = "py38"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py38"]
